--- a/package.json
+++ b/package.json
@@ -59,4 +59,9 @@
           "dev": "vite",
           "build": "vite build"
       }
+    {
+  "scripts": {
+    "build": "[my-framework] build --output public"
+  }
+}
   }
